# WinMac-Menu

./: CLI_USAGE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  WinMacMenu.rc
config/: config.default.ini  config.systemsettings.ini  default_config.ini  settings_config.ini
src/: WinMacMenu.rc  config.c  config.h  main.c  menu.c  recent.c  resource.h  settings.c  util.c  util.h
